# data-reconciler

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  example.env  isort.cfg  pyproject.toml
app/: main.py  routes.py  utils.py  views.py
app/core/: config.py
app/templates/: index.html
app/templates/pages/: upload.html
docker/: Dockerfile
